# hipercampo

./: .coverage  .gitignore  .mcp.json  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.es.md  INSTALL.md  LICENSE  README.es.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: 01_personal_assistant.py  02_project_knowledge.py  03_creative_brainstorm.py  04_the_long_night.py  README.md
hipercampo/: __init__.py  audit.py  backup.py  budget.py  cli.py  config.py  encoder.py  identity.py  memory.py  policy.py  procs.py  roles.py  safety.py  semantic.py  server.py  store.py  surprise.py  vsa.py
scripts/: baselines.py  benchmark.py  calibrate.py  demo.py  mcp_smoke.py  muse_demo.py  roles_demo.py  scenarios.py  stress.py  tokens.py
tests/: helpers.py  test_api_contract.py  test_audit.py  test_axes.py  test_backup.py  test_budget.py  test_calibration.py  test_cli.py  test_dream.py  test_estados.py  test_facthistory.py  test_factstore.py  test_failures.py  test_guardrails.py  test_hardening.py  test_identity.py  test_linked.py  test_memory.py  test_migration.py  test_muse.py  test_namespaces.py  test_policy.py  test_procs.py  test_properties.py  test_purge.py  test_resilience.py  test_roles.py  test_safety.py  test_semantic.py  test_surprise.py  test_tenancy.py  test_update.py  test_vsa.py
