[project]
name = "hipercampo"
version = "0.1.0"
description = "Memoria viva para Claude basada en hipervectores (VSA): escritura por sorpresa, consolidación tipo sueño y olvido activo. Sin embeddings densos, sin GPU."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
# Hook semántico OPCIONAL. Trae modelos de terceros con su propia licencia
# (ver ATTRIBUTION.md). No se instala por defecto: el core es VSA puro, CPU.
semantic = ["sentence-transformers>=2.2"]

[project.scripts]
hipercampo = "hipercampo.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hipercampo"]
