[project]
name = "hipercampo"
version = "0.1.0a3"
description = "Living, local-first memory for Claude built on hypervectors (VSA): surprise-gated writing, sleep consolidation, active forgetting, and compositional role queries. MCP server, CPU-only, no embeddings required."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Armando Jaleo" }]
keywords = ["memory", "vsa", "hyperdimensional-computing", "hdc", "llm", "agent-memory",
            "mcp", "claude", "associative-memory", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/armandojaleo/hipercampo"
Repository = "https://github.com/armandojaleo/hipercampo"
Issues = "https://github.com/armandojaleo/hipercampo/issues"
Changelog = "https://github.com/armandojaleo/hipercampo/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Hook semántico OPCIONAL. Trae modelos de terceros con su propia licencia
# (ver ATTRIBUTION.md). No se instala por defecto: el core es VSA puro, CPU.
semantic = ["sentence-transformers>=2.2"]

[project.scripts]
hipercampo = "hipercampo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hipercampo"]
